public/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amd-front
  namespace: amd-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: amd-front
  template:
    metadata:
      labels:
        app: amd-front
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
      - name: amd-front
        image: nginx
        ports:
        - containerPort: 80
      nodeName: worker2
