public/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: my-namespace
spec:
  rules:
  - host: example.com
  http:
    paths:
    - path: /service
      pathType: Prefix
      backend:
        service:
          name: my-service
          port:
          number: 80
